unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/MarketingEmailHistoryTracker__c.object-meta.xml
<CustomObject>
    <label>MarketingEmailHistoryTracker</label>
    <nameField>
        <displayFormat>MCH-{0000000}</displayFormat>
        <label>MarketingEmailHistoryTracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MarketingEmailHistoryTracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>