unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>CampaignName</label>
    <type>TextArea</type>
</CustomField>