unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MarketingEmailHistoryTracker</relationshipLabel>
    <relationshipName>MarketingEmailHistoryTracker</relationshipName>
    <type>Lookup</type>
</CustomField>