unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/fields/DateTimeSent__c.field-meta.xml
<CustomField>
    <fullName>DateTimeSent__c</fullName>
    <label>DateTimeSent</label>
    <type>DateTime</type>
</CustomField>