unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/fields/EmailName__c.field-meta.xml
<CustomField>
    <fullName>EmailName__c</fullName>
    <label>EmailName</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>