unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/fields/OriginalURL__c.field-meta.xml
<CustomField>
    <fullName>OriginalURL__c</fullName>
    <label>OriginalURL</label>
    <type>Url</type>
</CustomField>