unpackaged/main/default/objects/MarketingEmailHistoryTracker__c/fields/PermURL__c.field-meta.xml
<CustomField>
    <fullName>PermURL__c</fullName>
    <label>PermURL</label>
    <type>Url</type>
</CustomField>